--- a/aplikacja/pom.xml
+++ b/aplikacja/pom.xml
@@ -44,7 +44,17 @@
         <scope>provided</scope>
     </dependency>
     
-   
+   <dependency>
+    <groupId>postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>9.1-901-1.jdbc4</version>
+</dependency>
+
+<dependency>  
+    <groupId>org.springframework</groupId>  
+    <artifactId>spring-jdbc</artifactId>  
+    <version>5.1.1.RELEASE</version>  
+</dependency>  
 
   </dependencies>
 <properties>
