--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -8,4 +8,11 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+## Hibernate Properties
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
