--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+hibernate.show_sql=true
