--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=123456
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 hibernate.show_sql=true
