--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/baza
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
+##ustawienia ViewResolver
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+ 
+//For detailed logging during development
+ 
+logging.level.org.springframework=TRACE
+logging.level.com=TRACE
+
 #drop n create table again, good for testing, comment this in production
 ## Hibernate Properties
 
