--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
+##spring.datasource.hikari.connectionTimeout=20000
+##spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/baza
@@ -8,13 +8,11 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 
 ##ustawienia ViewResolver
-spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.prefix=WEB-INF/view/
 spring.mvc.view.suffix=.jsp
  
-//For detailed logging during development
+##For detailed logging during development
  
-logging.level.org.springframework=TRACE
-logging.level.com=TRACE
 
 #drop n create table again, good for testing, comment this in production
 ## Hibernate Properties
