--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.password=123456
 ##ustawienia ViewResolver
 spring.mvc.view.prefix=WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
  
 ##For detailed logging during development
  
