--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 hibernate.show_sql=true
+
+spring.security.user.name: user
+spring.security.user.password maflow
+
+
