--- a/MesAplication/pom.xml
+++ b/MesAplication/pom.xml
@@ -12,11 +12,13 @@
 	<artifactId>MesAplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MesAplication</name>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
 	</properties>
 
 <dependencies>
@@ -52,6 +54,13 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
+		</dependency>
+		
+				<!-- https://mvnrepository.com/artifact/org.webjars/chartjs -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>chartjs</artifactId>
+		    <version>2.9.3</version>
 		</dependency>
 		
   		<dependency>
@@ -118,20 +127,36 @@
 		<plugins>
 
 			<plugin>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-maven-plugin</artifactId>
-    <configuration>
-        <mainClass>com.mainclass</mainClass>
-    </configuration>
-    <executions>
-        <execution>
-            <goals>
-                <goal>repackage</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
+				    <groupId>org.springframework.boot</groupId>
+				    <artifactId>spring-boot-maven-plugin</artifactId>
+				    <configuration>
+				    <mainClass>com.mainclass</mainClass>
+				    </configuration>
+				    <executions>
+				    <execution>
+				    <goals>
+				    <goal>repackage</goal>
+				    </goals>
+				    </execution>
+				    </executions>
+			</plugin>
+			
+			<plugin>
+			    	<artifactId>maven-war-plugin</artifactId>
+			    	<configuration><attachClasses>true</attachClasses> 
+			    	<webResources>
+			         <resource>
+			         <directory>src/main/webapp</directory>
+			         <filtering>true</filtering>
+			         </resource>
+			        </webResources>
+			        <failOnMissingWebXml>false</failOnMissingWebXml>
+			    	</configuration>
+			</plugin>
+			
+
+			
 		</plugins>
 	</build>
-
 </project>
+
