--- a/MesAplication/pom.xml
+++ b/MesAplication/pom.xml
@@ -50,6 +50,14 @@
 		    <artifactId>jquery</artifactId>
 		    <version>3.3.1</version>
 		</dependency>
+				
+				<!-- https://mvnrepository.com/artifact/org.webjars/datatables -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>datatables</artifactId>
+		    <version>1.9.4-2</version>
+		</dependency>
+				
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
