Second RODO commit - first JSP works!

--- a/rodo/src/main/resources/application.properties
+++ b/rodo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+##ustawienia ViewResolver
+spring.mvc.view.prefix=WEB-INF/view/
+spring.mvc.view.suffix=.jsp
 
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/baza
+spring.datasource.username=postgres
+spring.datasource.password=123456
