--- a/MesAplication/pom.xml
+++ b/MesAplication/pom.xml
@@ -118,6 +118,8 @@
 		    <artifactId>spring-boot-maven-plugin</artifactId>
 		    <version>2.1.9.RELEASE</version>
 		</dependency>
+	
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -131,40 +133,15 @@
 		</dependency>
 </dependencies>
 
-	<build>
-		<plugins>
+  <build>
+  <finalName>mes</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
-			<plugin>
-				    <groupId>org.springframework.boot</groupId>
-				    <artifactId>spring-boot-maven-plugin</artifactId>
-				    <configuration>
-				    <mainClass>com.mainclass</mainClass>
-				    </configuration>
-				    <executions>
-				    <execution>
-				    <goals>
-				    <goal>repackage</goal>
-				    </goals>
-				    </execution>
-				    </executions>
-			</plugin>
-			
-			<plugin>
-			    	<artifactId>maven-war-plugin</artifactId>
-			    	<configuration><attachClasses>true</attachClasses> 
-			    	<webResources>
-			         <resource>
-			         <directory>src/main/webapp</directory>
-			         <filtering>true</filtering>
-			         </resource>
-			        </webResources>
-			        <failOnMissingWebXml>false</failOnMissingWebXml>
-			    	</configuration>
-			</plugin>
-			
-
-			
-		</plugins>
-	</build>
 </project>
 
