Rodo Zapis/Odczyt test 1

--- a/rodo/src/main/resources/application.properties
+++ b/rodo/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.mvc.view.suffix=.jsp
 
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/baza
+spring.datasource.url=jdbc:postgresql://localhost:5432/bazarodo
 spring.datasource.username=postgres
 spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto = none
