--- a/MesAplication/src/main/resources/application.properties
+++ b/MesAplication/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 hibernate.show_sql=true
 
 spring.security.user.name: user
-spring.security.user.password maflow
+spring.security.user.password dawid
 
 ### Spring boot 1.x #########
 server.contextPath=/mes
