--- a/rodo/pom.xml
+++ b/rodo/pom.xml
@@ -40,11 +40,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -72,10 +73,17 @@
 		    <artifactId>jquery</artifactId>
 		    <version>3.4.1</version>
 		</dependency>
+		
+		<dependency>
+			    <groupId>org.webjars</groupId>
+			    <artifactId>bootstrap</artifactId>
+			    <version>4.1.3</version>
+		</dependency>
 		        
 	</dependencies>
 
 	<build>
+	  <finalName>rodo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
