--- a/MesAplication/pom.xml
+++ b/MesAplication/pom.xml
@@ -118,8 +118,15 @@
 		    <artifactId>spring-boot-maven-plugin</artifactId>
 		    <version>2.1.9.RELEASE</version>
 		</dependency>
-	
 		
+		
+		<dependency>
+		    <groupId>com.heroku.sdk</groupId>
+		    <artifactId>heroku-maven-plugin</artifactId>
+		    <version>3.0.2</version>
+		</dependency>
+			
+				
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
