--- a/rodo/pom.xml
+++ b/rodo/pom.xml
@@ -30,9 +30,8 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.itextpdf</groupId>
-		    <artifactId>itextpdf</artifactId>
-		    <version>5.5.10</version>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
 		</dependency>
 
 		<dependency>
