--- a/rodo/pom.xml
+++ b/rodo/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+	
+	        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -27,11 +33,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		
-		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-config</artifactId>
 		</dependency>
 
 		<dependency>
@@ -78,6 +79,9 @@
 			    <artifactId>bootstrap</artifactId>
 			    <version>4.1.3</version>
 		</dependency>
+		
+	
+	
 		        
 	</dependencies>
 
